# DontSpeak

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  NOTICE.md  README.md  STATUS-SCHEMA.md
.claude/skills/build-linux/: SKILL.md
.claude/skills/build-macos/: SKILL.md
.claude/skills/build-windows/: SKILL.md
.claude/skills/prepush/: SKILL.md
.github/: actionlint.yaml
.github/actions/linux-build-deps/: action.yml
.github/actions/ring-asm-windows/: action.yml
.github/workflows/: ci.yml  csharp.yml  release.yml
apps/linux/: disable-daemon.sh  dontspeak.desktop  enable-daemon.sh  install-gui.sh  keybindings.snippet.json  package.sh  udev-rule.txt  uninstall.sh
apps/linux/aec/: 99-ds-aec.conf  ds-echo-cancel.pa
apps/linux/gtk/: Cargo.toml
apps/linux/gtk/src/: ffi.rs  icon.rs  main.rs  overlay.rs  status.rs  tray.rs  ui.rs
apps/linux/hooks/: play
apps/macos/: .swift-format  Package.swift  build.sh  bundle-lib.sh  bundle.sh  dist-apps.sh  dist-dmgs.sh  make-dmg.sh  notarize.sh
apps/macos/AppIcon.icon/: icon.json
apps/macos/Bundle/: DontSpeak.entitlements  Info.plist
apps/macos/SmKokoro/: .gitignore  Package.resolved  Package.swift  ctest.c  ctest_asr.c
apps/macos/SmKokoro/Sources/smkokoro/: shim.swift
apps/macos/SmKokoro/Sources/smoke/: main.swift
apps/macos/SmKokoro/include/: smkokoro.h
apps/macos/Sources/CDontSpeak/: shim.c
apps/macos/Sources/CDontSpeak/include/: dontspeak.h
apps/macos/Sources/DontSpeak/: Brand.swift  CreditsView.swift  DictationPanel.swift  DontSpeakApp.swift  DontSpeakCore.swift  FFI.swift  Glass.swift  LibrariesView.swift  Localization.swift  LogView.swift  LogsView.swift  MainWindow.swift  StatsView.swift  StatusView.swift  ToolsView.swift  TrayAnimator.swift  TrayMenu.swift  WindowHelpers.swift
apps/macos/Sources/DontSpeakLogic/: EngineStatsModel.swift  LogModel.swift  MicPermission.swift  StatusYield.swift
apps/macos/Tests/DontSpeakLogicTests/: EngineStatsTests.swift  LogModelTests.swift  MicPermissionTests.swift  StatusYieldTests.swift
apps/windows/: disable.ps1  enable.ps1  install.ps1
apps/windows/installer/: .gitignore  README.md  build-common.ps1  build-portable.ps1  build.ps1  dontspeak.iss  gen_wizard_images.py
apps/windows/winui/: .editorconfig  App.xaml  App.xaml.cs  Brand.cs  BrandGlyph.cs  CursorHyperlinkButton.cs  DictationPanel.cs  DontSpeak.WinUI.csproj  Loc.cs  LocExtension.cs  MainWindow.xaml  MainWindow.xaml.cs  Native.cs  TrayIcon.cs  Win32.cs  app.manifest
apps/windows/winui.tests/: DontSpeak.WinUI.Tests.csproj  HealthSnapshotTests.cs
assets/: seed-color.txt
claude/: settings.snippet.json
claude/hooks/: HOOKS-README.md  capslock.swift  mic-active.swift
docs/: AEC.md  ALWAYS-LISTENING.md  BUILD-DEPLOY.md  FULL-DUPLEX-PORT.md  LEAK-CPU-AUDIT.md  LINUX-PORT.md  PER-TERMINAL-QUEUES.md  STREAMING-STT-MACOS-PLAN.md  STREAMING-STT-PLAN.md  localization.md  signing.md
rust/: Cargo.toml  README.md
rust/crates/dontspeak/: Cargo.toml
rust/crates/dontspeak/src/: engine_launch.rs  hook_core.rs  hook_narrate.rs  hook_prompt.rs  hook_speak.rs  main.rs  mcp.rs  narrate.rs  tools.rs  voices.rs  wire.rs  wire_code.rs  wire_desktop.rs  wire_hooks.rs  wire_mcp.rs
rust/crates/dontspeak/tests/: cli_dispatch.rs
rust/crates/dontspeakd/: Cargo.toml  build.rs
rust/crates/dontspeakd/src/: barge.rs  boot.rs  config_gate.rs  config_watch.rs  downloads.rs  engine.rs  helper_stt.rs  ipc.rs  lib.rs  listen.rs  listener.rs  logging.rs  main.rs  stats.rs  status.rs  stt_test.rs  tts.rs  ttsq.rs
rust/crates/ds-aec/: Cargo.toml
rust/crates/ds-aec/src/: lib.rs  linux.rs  macos.rs  resample.rs  shared.rs  stub.rs  windows.rs
rust/crates/ds-config/: Cargo.toml
rust/crates/ds-config/src/: brand.rs  claude_code.rs  earcon.rs  enums.rs  lib.rs  log.rs  narration.rs  paths.rs  pidfile.rs  set_config.rs  speakers.rs  voice.rs  wire.rs
rust/crates/ds-config/src/wire/: codex.rs  desktop.rs  hooks.rs  settings.rs
rust/crates/ds-core/: Cargo.toml  build.rs  cbindgen.toml
rust/crates/ds-core/src/: engine.rs  ffi.rs  host.rs  lib.rs  models.rs  status_fmt.rs
rust/crates/ds-engines/: Cargo.toml
rust/crates/ds-engines/src/: lib.rs
rust/crates/ds-i18n/: Cargo.toml  build.rs
rust/crates/ds-i18n/locales/: en.yml
rust/crates/ds-i18n/src/: lib.rs
rust/crates/ds-ipc/: Cargo.toml
rust/crates/ds-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs  transport.rs
rust/crates/ds-model/: Cargo.toml
rust/crates/ds-model/src/: archive.rs  coreml_repo.rs  download.rs  hash.rs  lib.rs  libraries.rs  ort.rs  setup.rs  spec.rs  target.rs  urls.rs
rust/crates/ds-platform/: Cargo.toml  build.rs
rust/crates/ds-platform/src/: chord.rs  lib.rs  linux.rs  macos.rs  mic_watch.rs  windows.rs
rust/crates/ds-platform/src/macos/: capskey.rs  iohid.rs  iokit.rs  led.rs
rust/crates/ds-proc/: Cargo.toml
rust/crates/ds-proc/src/: lib.rs
rust/crates/ds-status/: Cargo.toml
rust/crates/ds-status/src/: lib.rs  state.rs
rust/crates/ds-stt/: Cargo.toml
rust/crates/ds-stt/examples/: diarize_wav.rs  enroll_check.rs  parakeet_check.rs
rust/crates/ds-stt/src/: boundary.rs  claude_native.rs  coreml.rs  diarize.rs  lib.rs  local.rs  parakeet.rs  separate.rs  shim.rs  streaming.rs  sysspeech.rs  system.rs
rust/crates/ds-tools/: Cargo.toml
rust/crates/ds-tools/src/: descriptions.rs  lib.rs
rust/crates/ds-tts/: Cargo.toml  build.rs
rust/crates/ds-tts/examples/: ab_short_tail.rs  ane_check.rs  coreml_bench.rs
rust/crates/ds-tts/src/: ane_voices.rs  batch.rs  enumerate.rs  g2p.rs  kokoro.rs  lib.rs  numbers.rs  play.rs  say.rs  synth.rs  synth_coreml.rs  system.rs  trim.rs  vocab.rs  voices.rs  wav.rs
scripts/: build.sh  install-daemon.sh  install.sh  uninstall.sh  version.sh
scripts/lib/: common.sh
scripts/streaming-stt/: README.md  reference_prototype.py
web/: install.md  install.ps1  install.sh  llms.txt
