[package]
name = "ds-status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Typed model_status schema shared by the engine (producer) and the UI FFI (consumer): serde + uniffi::Record, THE one source of truth for the engine→app status contract (replaces the per-platform hand-written DTOs)."

[dependencies]
# serde for the wire: the engine serializes this to the model_status JSON; each platform's
# hand-written DTOs (winui Native.cs, macOS) mirror THIS shape and parse it. ONE Rust
# definition, hand-mirrored on the edges and guarded by the round-trip contract test below.
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
